# remo-client-rs

./: Cargo.toml  README.md
samples/: devices.json  user.json
src/: client.rs  device.rs  lib.rs  main.rs  user.rs  util.rs
src/appliance/: aircon.rs  common.rs  light.rs  mod.rs  smart_meter.rs  tv.rs
