[package]
name = "remo-client-rs"
version = "0.1.0"
authors = ["ukiyoyo <13175394+ukiyoyo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.0", features = ["full"]}
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
